--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "js_oop_exercise",
+  "name": "prototype-zoo-half-day",
   "version": "0.1.0",
   "description": "An exercise for prototypal inheritance with JavaScript",
   "main": "index.js",
