--- a/package.json
+++ b/package.json
@@ -1,16 +1,26 @@
 {
   "name": "prototype-zoo-half-day",
+  "description": "A half-day lab on inheritance.",
   "version": "0.1.0",
-  "description": "An exercise for prototypal inheritance with JavaScript",
-  "main": "index.js",
-  "directories": {
-    "test": "test"
+  "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/gSchool/prototype-zoo-half-day"
+  },
+  "keywords": [
+    "javascript",
+    "inheritance"
+  ],
+  "devDependencies": {
+    "gulp": "^3.9.0",
+    "gulp-eslint": "^1.0.0",
+    "gulp-mocha": "^2.1.3"
   },
   "scripts": {
-    "test": "jasmine spec/animalSpec.js"
+    "test": "gulp test"
   },
-  "author": "Team Galvanize",
-  "license": "ISC",
-  "dependencies": {
-  }
+  "author": "Elie Schoppik <eschoppik@gmail.com>",
+  "contributors": [
+    "Cho S. Kim <choskim.me@gmail.com>"
+  ],
 }
